[package]
name = "whirlpool"
version = "0.3.2"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.29.0" }
anchor-spl = { version = "=0.29.0", features = ["metadata", "memo"] }
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "=0.5.0" }
spl-token-metadata-interface = { version = "=0.2.0" }
solana-program = { version = "=2.1.6" }
uint = { version = "=0.9.5", default-features = false }
borsh09 = { package = "borsh", version = "=0.9.3" }
solana-security-txt = { version = "=1.1.1" }


[dev-dependencies]
proptest = "=1.5.0"
serde = "=1.0.217"
serde_json = "=1.0.124"

[dev-dependencies.serde_with]
version = "=2.3.3"
features = ["json"]


[patch.crates-io]
arrayref = { version = "0.3.9" }
bytemuck = { version = "1.20.0" }
